--- a/style.css
+++ b/style.css
@@ -386,6 +386,24 @@ a {
     text-align: center;
     width: 100%;
     height: 70px;
+    animation-name: imdb1;
+    animation-duration: 2s;
+    animation-timing-function: ease;
+    text-shadow: 0px 0px 10px rgba(255, 217, 0, 0.675);
+}
+@keyframes imdb1 {
+    0%{
+        opacity: 0;
+        transform: translateY(60px) scale(0.5);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+.imdbtop span{
+    color: gold;
+    font-family: cursive, Arial, Helvetica, sans-serif;
 }
 .main1{
     display: flex;
@@ -393,6 +411,7 @@ a {
     gap: 30px;
     padding: 0px 100px 0px 100px;
     font-family: 'Roboto', Helvetica, Arial, sans-serif;
+    margin-top: 100px;
 }
 .imdb_cards{
     width: 100%;
@@ -402,11 +421,33 @@ a {
     gap: 20px;
     padding: 20px; 
 }
+.cards{
+    box-shadow: 5px 5px 10px white;
+    margin-top: 50px;
+    transition: all 1s;
+    animation-name: imdb2;
+    animation-duration: 2s;
+    animation-timing-function: ease;
+}
+@keyframes imdb2 {
+    0%{
+        opacity: 0;
+        transform: translateX(60px) scale(0.5);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
 .cards img{
     width: 100%;
     height: 65%;
     border-bottom: 2px solid black;
     border-radius: 8px 8px 0px 0px;
+}
+.cards:hover{
+    transform: translateY(-40px);
+    cursor: pointer;
 }
 #card-2 img{
     height: 338px;
@@ -498,14 +539,17 @@ ion-icon{
     height: 40px;
     border: none;
     border-radius: 7px;
-    background-color: rgba(224, 220, 220, 0.655);
+    background-color: rgba(224, 220, 220, 0.129);
     font-size: 1.2em;
     font-weight: bold;
     color: rgba(4, 110, 203, 0.975);
     cursor: pointer;
 }
+.watchbtn button:hover{
+    background-color: rgba(235, 235, 235, 0.179);
+}
 .trailerbtn{
-    padding: 0px 10px 0px 10px;
+    padding: 0px 10px 10px 10px;
     width: 100%;
     
 }
