--- a/style.css
+++ b/style.css
@@ -27,9 +27,9 @@ body{
 }
 
 .logosite{
-    width: 40px;
-    margin-right: 5px;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 a
@@ -39,9 +39,11 @@ a
     font-weight: 600;
 }
 
-.logo
-{
+#logo {
     display: flex;
+    width: 60px;
+    height: auto;
+    margin-right: 5px;
 }
 
 .navbar
@@ -53,15 +55,34 @@ a
     gap: 50px;
 }
 
-.home,.about{
-    margin-right: 20px;
-}
-
 .home,.about,.contact{
-    font-size: 25px;
+    font-size: 15px;
     font-family: 'Poppins';
     color: white;
+    margin-right: 5px;
 }
+
+.sign-in {
+    background-color: black;
+    border: 1px solid white;
+    border-radius: 3px;
+    padding-left: 10px; 
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: white; 
+    font-size: 12px;
+    font-family: 'Poppins';
+    font-weight: bold;
+}
+
+.sign-in:hover {
+    box-shadow: 0 0 15px yellow;
+    background-color: white;
+    color: black;
+    border: none;
+}
+
 /* Navigation links style */
 .navbar {
     display: flex;
@@ -111,11 +132,89 @@ a
 }
 
 .streamixx{
-    font-size: 30px;
+    font-size: 20px;
     font-family: 'Poppins';
     color: white;
     display: flex;
     letter-spacing: 5px;
+}
+
+#nav-bar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px;
+}
+
+.nav-section {
+    height: 45px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#logo-container {
+    width: 15%;
+    height: 45px;
+    display: flex;
+    align-items: center;
+}
+
+#search-bar-container {
+    width: 45%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: white;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+#search-options {
+    font-family: 'Poppins';
+    border: none;
+    height: 35px;
+    width: 15%;
+    background-color: white;
+    padding-left: 5px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+#search-options:focus {
+    outline: none;
+}
+
+#search-bar {
+    font-family: 'Poppins';
+    width: 80%;
+    height: 30px;
+    border: none;
+    padding-left: 10px;
+}
+
+#search-bar:focus {
+    outline: none;
+}
+
+#search-icon-container {
+    display: flex;
+    padding-right: 10px;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: white;
+    height: 35px;
+    width: 5%;
+}
+
+#search-icon{
+    width: 15px;
+    height: 15px;
+}
+
+#bookmark-icon {
+    width: 30px;
+    height: auto;
 }
 
 .welcome{
@@ -124,7 +223,7 @@ a
     font-size: 8vw;
     font-family: 'Poppins';
     text-align: center;
-    margin-top:140px;
+    margin-top: 100px;
     font-weight: 700;
     text-shadow: 0 0 15px #ff3131;
 }
